--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,9 +2,10 @@
 main:
   - title: "Publications"
     url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
+   
+-
+- - title: "Talks"
+-   url: /talks/    
 
   - title: "Teaching"
     url: /teaching/    
@@ -18,5 +19,5 @@ main:
   - title: "CV"
     url: /cv/
     
-  - title: "Guide"
-    url: /markdown/
+ - - title: "Guide"
+ -   url: /markdown/
