--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,10 +2,9 @@
 main:
   - title: "Publications"
     url: /publications/
-   
--
-- - title: "Talks"
--   url: /talks/    
+
+  - title: "Talks"
+    url: /talks/    
 
   - title: "Teaching"
     url: /teaching/    
@@ -19,5 +18,5 @@ main:
   - title: "CV"
     url: /cv/
     
- - - title: "Guide"
- -   url: /markdown/
+  - title: "Guide"
+    url: /markdown/
